Prevent `web-preview__inner` height from being capped on smaller screens

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/readymade-template-generate-content/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/readymade-template-generate-content/style.scss
@@ -74,6 +74,13 @@
 			margin-left: 10px;
 			margin-top: 24px;
 		}
+
+		.web-preview__inner {
+			@media (max-height: 680px) {
+				height: inherit;
+			}
+
+		}
 	}
 
 	.generate-content__form {
